--- a/informe-tarea2-malmuna-rrivera.tex
+++ b/informe-tarea2-malmuna-rrivera.tex
@@ -20,20 +20,29 @@ los problemas de implementación asociados al desarrollo de un servicio en red y
 uso de técnicas criptográficas.
 
 \end{abstract}
-\section{Especificaciones de software}
-Versión Java: 
+\section{Ambiente de desarrollo}
 \begin{itemize}
- \item 1.7.01
- \item OpenJDK Runtime Environment (IcedTea 2.6.6)
- \item OpenJDK 64-Bit Server VM
-\end{itemize}
-Paquetes:
-\begin{itemize}
- \item java.net
- \item java.io
- \item java.util
- \item javax.crypto
- \item java.security
+  \item Versión Java: 
+  \begin{itemize}
+    \item 1.7.01
+    \item OpenJDK Runtime Environment (IcedTea 2.6.6)
+    \item OpenJDK 64-Bit Server VM
+    \item javac version 1.6.0\_39
+    \item java version 1.7.0\_101
+  \end{itemize}
+  \item Paquetes:
+  \begin{itemize}
+    \item java.net
+    \item java.io
+    \item java.util
+    \item javax.crypto
+    \item java.security
+  \end{itemize} 
+  \item Sistema operativo: 
+  \begin{itemize}
+    \item Ubuntu 14.04 LTS amd64 
+    \item Kernel 3.19.0-59-generic
+    \end{itemize}
 \end{itemize}
 
 
