--- a/informe-tarea2-malmuna-rrivera.tex
+++ b/informe-tarea2-malmuna-rrivera.tex
@@ -47,31 +47,36 @@ uso de técnicas criptográficas.
 
 
 \section{Diseño de la solución}
-Se implementa una aplicación Cliente-Servidor basada en sockets TCP. Esta permite enviar un mensaje de forma
-segura comparando los MAC calculados en ambos nodos de la conexión.
+Se implementa una aplicación Cliente-Servidor basada en sockets TCP, donde el cliente es capaz de
+verificar la recepción íntegra del mensaje por parte del servidor. El cliente calcula el código de
+autenticación asociado, envía el mensaje al servidor y luego recibe el MAC calculado por
+el servidor con el mensaje recibido. Si existe alguna diferencia entre el código calculado y recibido,
+implicaría que el mensaje fue manipulado durante su envío.
 \newline
 \\
-Para el Servidor se crea un socket que queda escuchando en el puerto indicado.
+\subsection{Servidor}
+Para el Servidor se crea un socket que queda escuchando en el puerto indicado:
 \begin{verbatim}
  17.  sersock = new ServerSocket(PORT);
 \end{verbatim}
-Al recibir una petición, se abre un socket para atender la conexión.  
+Al recibir una petición, se abre un nuevo socket para atender la conexión:
 \begin{verbatim}
  21. sock = sersock.accept();
 \end{verbatim}
-Luego se recibe el mensaje.
+Luego se recibe el mensaje del cliente:
 \begin{verbatim}
  24. BufferedReader is = new BufferedReader(
  25.        new InputStreamReader(sock.getInputStream()));
  27. String msg = is.readLine();
 \end{verbatim}
-Se calcula el MAC del mensaje y reenvía al cliente
+Se calcula el MAC del mensaje y se envía al cliente para su verificación:
 \begin{verbatim}
  28. String mac = HMAC.hmacDigest(msg, cryptoKey, "HmacMD5"); 
  30. PrintStream ios = new PrintStream(sock.getOutputStream());
  31. ios.println(mac);
 \end{verbatim}
 
+\subsection{Cliente}
 El cliente se conecta a la IP y puerto indicados.
 \begin{verbatim}
  41. sock= new Socket(ip, Server.PORT);
