--- a/informe-tarea2-malmuna-rrivera.tex
+++ b/informe-tarea2-malmuna-rrivera.tex
@@ -105,6 +105,11 @@ y tamaño de la llave. También de la potencia criptográfica de la función de 
 
 
 \section{Referencias}
+\begin{itemize}
+ \item Videos de clases \url{https://www.youtube.com/channel/UCTpOWF49wPMNtO_mlUyWDHw}.
+ \item RFC2104 \url{http://www.ietf.org/rfc/rfc2104.txt}
+ \item Hash-based message authentication code. Wikipedia. \url{https://en.wikipedia.org/wiki/Hash-based_message_authentication_code}.
+\end{itemize}
 
 
 \end{document} 
